responsive rules test

--- a/vezbi/12-11-2016/index.html
+++ b/vezbi/12-11-2016/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
     <title>Vezba 12-11-2016</title>
-    <link rel="stylesheet" href="css/reset.css"/>
+<!--    <link rel="stylesheet" href="css/reset.css"/>-->
     <link rel="stylesheet" href="css/main.css"/>
 
 </head>
 <body>
+    <h1 class="naslov">Ucime media query</h1>
 
 
 </body>
