--- a/vezbi/domasna-1/index.html
+++ b/vezbi/domasna-1/index.html
@@ -45,7 +45,7 @@
                 <h1>Our services</h1>
 
                 <div class="article">
-                    <img src="" alt="slika1" height="150px" width="90px" />
+                    <img src="img/download.jpg" alt="slika1" height="150px" width="90px" />
                     <div class="innerArticle"><h3>Web design</h3>
                     <p>asad asasd adasdsa adsad sadasd afaddf sfsdaf</p>
                     </div>
