--- a/vezbi/personalPage/index.html
+++ b/vezbi/personalPage/index.html
@@ -13,9 +13,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
+
         a {
             color: inherit;
+            font-size: 40px;
+            text-align: center;
+            font-family: monospace;
         }
+        h2{
+            color: #22287F;
+            font-size: 35px;
+            text-align: left;
+            font-family: sans-serif;
+        }
+        h3{
+            color: #22287F;
+            font-size: 25px;
+            text-align: left;
+            font-family: sans-serif;
+        }
+        h4{
+            color: #EB6E44;
+            font-size: 20px;
+            text-align: left;
+            font-family: sans-serif;
+        }
+
     </style>
 
 </body>
@@ -24,7 +47,7 @@
 
     <div class="main">
 
-        <div class="logo">
+        <div class="mainLogo">
 
             <div class="slikaLogo">
                 <img src="img/logoBojan.jpg" alt="logo" height="100%" width="100%">
@@ -32,52 +55,85 @@
 
         </div>
 
-        <div class="nav">
+        <div class="mainNav">
 
-            <div class="navInner">
+            <div class="mainNavInner">
 
-                <div class="navHome">
-                    <a href="index.html" style="text-decoration: none">
-                        <i class="fa fa-home"></i>
-                    </a>
+                <a href="html/about.html" style="text-decoration:none">
+
+                    <div class="mainNavAbout">
+                        About
+                    </div>
+                </a>
+
+                <a href="html/projects.html" style="text-decoration:none">
+
+                    <div class="mainNavProjects">
+                        Projects
+                    </div>
+                </a>
+
+                <a href="html/plans.html" style="text-decoration:none">
+
+                    <div class="mainNavPlans">
+                        Plans
+                    </div>
+                </a>
+
+
+
+                <a href="html/contact.html" style="text-decoration:none">
+
+                    <div class="mainNavContact">
+                        Contact
+                    </div>
+                </a>
+            </div>
+
+            <div class="mainContent">
+
+                <div class="mainContentInner">
+
+                    <div class="mainContentSlika">
+                        <div class="mainContentSlika1"></div>
+                    </div>
+
+                    <div class="mainContentInfo">
+
+                        <div class="mainContentInfo1">
+
+                            <br><br>
+                            <h2> Bojan Spasovski</h2>
+                            <br><br>
+                            <h3>Phone:</h3>
+                            <h4>00 389 75 309 000</h4>
+                            <br><br>
+                            <h3>Email:</h3>
+                            <h4>9spasovski@gmail.com</h4>
+                            <br><br>
+                            <h3>Adress:</h3>
+                            <h4>bul. Video Smilevski Bato 2b/2/31</h4>
+                            <br><br>
+                            <h3>Date of birth:</h3>
+                            <h4>17.03.2002</h4>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
-                <div class="navAP">
+            </div>
 
-                    <a href="html/about.html" style="text-decoration:none">
+            <div class="mainFooter">
 
-                        <div class="navAbout">
-                            About
-                        </div>
-                    </a>
+                <div class="mainFooterInner">
 
-                    <a href="html/projects.html" style="text-decoration:none">
-
-                        <div class="navProjects">
-                            Projects
-                        </div>
-                    </a>
-
-                </div>
-
-                <div class="navPC">
-
-                    <a href="html/plans.html" style="text-decoration:none">
-
-                        <div class="navPlans">
-                            Plans
-                        </div>
-                    </a>
-
-
-
-                    <a href="html/contact.html" style="text-decoration:none">
-
-                        <div class="navContact">
-                            Contact
-                        </div>
-                    </a>
+                    <i class="fa fa-facebook-official"></i>
+                    <i class="fa fa-twitter-square"></i>
+                    <i class="fa fa-linkedin-square"></i>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-google-plus-square"></i>
 
                 </div>
 
