domasna planeti i digitron i personal p.

--- a/vezbi/javascriptDomasnaTezinaNaPlaneti/index.html
+++ b/vezbi/javascriptDomasnaTezinaNaPlaneti/index.html
@@ -18,6 +18,23 @@
 
     <button onclick="presmetaj()" class="kopce">klikni</button>
 
+   <table border="1">
+    <tr>
+       <td>mesecina</td>
+       <td id="mesecina"></td>
+       </tr>
+
+       <tr>
+           <td> mars</td>
+           <td id="mars"></td>
+       </tr>
+
+       <tr>
+           <td>jupiter</td>
+           <td id="jupiter"></td>
+       </tr>
+    </table>
+
 </body>
 
 <script src="js/main.js" type="text/javascript"></script>
