--- a/vezbi/1/index.html
+++ b/vezbi/1/index.html
@@ -13,7 +13,7 @@
 
 <div class="digitron">
 
-    <div class="red">
+    <div class="">
     <input type="text" id="vlez"/>
 
     <button id="presmetaj" onclick="presmetaj()">presmetaj</button>
@@ -22,28 +22,28 @@
     </div>
 
     <div class="red">
-    <div class="brojka">1</div>
-    <div class="brojka">2</div>
-    <div class="brojka">3</div>
-    <div class="brojka">+</div>
+    <div class="brojka" onclick="vnesi(1)">1</div>
+    <div class="brojka" onclick="vnesi(2)">2</div>
+    <div class="brojka" onclick="vnesi(3)">3</div>
+    <div class="brojka" onclick="vnesi(+)">+</div>
     </div>
 
     <div class="red">
-    <div class="brojka">4</div>
-    <div class="brojka">5</div>
-    <div class="brojka">6</div>
-    <div class="brojka">-</div>
+    <div class="brojka" onclick="vnesi(4)">4</div>
+    <div class="brojka" onclick="vnesi(5)">5</div>
+    <div class="brojka" onclick="vnesi(6)">6</div>
+    <div class="brojka" onclick="vnesi(-)">-</div>
     </div>
 
     <div class="red">
-    <div class="brojka">7</div>
-    <div class="brojka">8</div>
-    <div class="brojka">9</div>
-    <div class="brojka">=</div>
+    <div class="brojka" onclick="vnesi(7)">7</div>
+    <div class="brojka" onclick="vnesi(8)">8</div>
+    <div class="brojka" onclick="vnesi(9)">9</div>
+    <div class="brojka" onclick="vnesi(=)">=</div>
     </div>
 
     <div class="red">
-    <div class="golemBroj">0</div>
+    <div class="golemBroj" onclick="vnesi(0)">0</div>
     </div>
 
 
