zabranet vlez znak do znak

--- a/vezbi/1/index.html
+++ b/vezbi/1/index.html
@@ -25,21 +25,21 @@
     <div class="brojka" onclick="vnesi(1)">1</div>
     <div class="brojka" onclick="vnesi(2)">2</div>
     <div class="brojka" onclick="vnesi(3)">3</div>
-    <div class="brojka" onclick="vnesi(+)">+</div>
+    <div class="brojka" onclick="vnesi('+')">+</div>
     </div>
 
     <div class="red">
     <div class="brojka" onclick="vnesi(4)">4</div>
     <div class="brojka" onclick="vnesi(5)">5</div>
     <div class="brojka" onclick="vnesi(6)">6</div>
-    <div class="brojka" onclick="vnesi(-)">-</div>
+    <div class="brojka" onclick="vnesi('-')">-</div>
     </div>
 
     <div class="red">
     <div class="brojka" onclick="vnesi(7)">7</div>
     <div class="brojka" onclick="vnesi(8)">8</div>
     <div class="brojka" onclick="vnesi(9)">9</div>
-    <div class="brojka" onclick="vnesi(=)">=</div>
+    <div class="brojka" onclick="presmetaj()">=</div>
     </div>
 
     <div class="red">
