jquery-animacija so kocka

--- a/vezbi/jquery/index.html
+++ b/vezbi/jquery/index.html
@@ -37,6 +37,16 @@
 //        $('#novDiv').on('click',function(){
 //console.log('kliknat summmm')
 //})
+
+
+        $('#novDiv').on('click',function(){
+        $('#novDiv').addClass('active');
+        })
+
+        $('.novDiv').on('click',function(){
+        $('#novDiv').removeClass('active');
+        })
+
     </script>
 
     </html>
