--- a/vezbi/horseBet/html/index.html
+++ b/vezbi/horseBet/html/index.html
@@ -78,7 +78,7 @@
                 <button class="uplata">Uplata</button>
             </div>
             <div class="start">
-                <button class="start" onclick="imeNaFunkcija()">Start</button>
+                <button class="start" onclick="start()">Start</button>
             </div>
         </div>
 
