--- a/vezbi/horseBet/html/horses.html
+++ b/vezbi/horseBet/html/horses.html
@@ -13,7 +13,7 @@
                 <h1>Boja</h1>
             </div>
             <div class="infoB2">
-                <h1>#2d221a</h1>
+                <h1>Crna</h1>
             </div>
             <div class="infoB1">
                 <h1>Broj</h1>
@@ -42,7 +42,13 @@
                 <h1>40 km/h</h1>
             </div>
         </div>
+        <div class="infoA">
+            <div class="infoA1">
+                <h1>Koeficient</h1></div>
+            <div class="infoA1">
+                <h1>1.3</h1></div>
     </div>
+</div>
 </div>
 
 <div class="infoKonj k1">
@@ -60,7 +66,7 @@
                 <h1>Boja</h1>
             </div>
             <div class="infoB2">
-                <h1>#fd3</h1>
+                <h1>Bela</h1>
             </div>
             <div class="infoB1">
                 <h1>Broj</h1>
@@ -89,6 +95,12 @@
                 <h1>36 km/h</h1>
             </div>
         </div>
+        <div class="infoA">
+            <div class="infoA1">
+                <h1>Koeficient</h1></div>
+            <div class="infoA1">
+                <h1>1.7</h1></div>
+    </div>
     </div>
 </div>
 
@@ -107,7 +119,7 @@
                 <h1>Boja</h1>
             </div>
             <div class="infoB2">
-                <h1>#343s</h1>
+                <h1>Kafeava</h1>
             </div>
             <div class="infoB1">
                 <h1>Broj</h1>
@@ -136,6 +148,12 @@
                 <h1>59 km/h</h1>
             </div>
         </div>
+        <div class="infoA">
+            <div class="infoA1">
+                <h1>Koeficient</h1></div>
+            <div class="infoA1">
+                <h1>2</h1></div>
+    </div>
     </div>
 </div>
 
@@ -154,7 +172,7 @@
                 <h1>Boja</h1>
             </div>
             <div class="infoB2">
-                <h1>#23s2</h1>
+                <h1>Crna</h1>
             </div>
             <div class="infoB1">
                 <h1>Broj</h1>
@@ -183,5 +201,11 @@
                 <h1>29 km/h</h1>
             </div>
         </div>
+        <div class="infoA">
+            <div class="infoA1">
+                <h1>Koeficient</h1></div>
+            <div class="infoA1">
+                <h1>2.3</h1></div>
+    </div>
     </div>
 </div>
