--- a/vezbi/horseBet/html/index.html
+++ b/vezbi/horseBet/html/index.html
@@ -26,8 +26,6 @@
             <div class="konj" onclick='prikaziKonj(3)'><img src="../sliki/k3_0.png"></div>
         </div>
 
-        <div class="externalHorses"></div>
-
         <div class="kladilnica">
             <div class="uplata">
                 <button class="uplata" onclick="kladilnica()">Uplata</button>
@@ -35,33 +33,32 @@
             <div class="start">
                 <button class="start" onclick="trka()">Start</button>
             </div>
+
+            <div class="selekcijaA">
+                <input type="number" class="suma" />
+                <select class="selekcija">
+                    <option value="" disabled selected>Select your option</option>
+                    <option value="0">crni</option>
+                    <option value="1">belco</option>
+                    <option value="2">bojan</option>
+                    <option value="3">aleksandar</option>
+                </select>
+
+                <table class="rezultati">
+
+                    <tr>
+                        <td>Uplata</td>
+                        <td>Konj</td>
+                        <td>Koeficient</td>
+                        <td>Vkupno</td>
+                    </tr>
+
+                </table>
+            </div>
         </div>
 
-        <input type="number" class="suma"/>
-        <select class="selekcija">
-            <option value="" disabled selected>Select your option</option>
-            <option value="0">crni</option>
-            <option value="1">belco</option>
-            <option value="2">bojan</option>
-            <option value="3">aleksandar</option>
-        </select>
-
-        <table class="rezultati">
-        <thead>
-            <tr>
-            <td>Uplata</td>
-            <td>Konj</td>
-            <td>Koeficient</td>
-            <td>Vkupno</td>
-            </tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-        </table>
-
+        <div class="externalHorses"></div>
     </div>
-
 </body>
 
 <script src="../js/main.js"></script>
