--- a/vezbi/joke/index.html
+++ b/vezbi/joke/index.html
@@ -10,26 +10,11 @@
 </head>
 
 <body>
-<!--
-    <div class="ChuckNorris">
-        <h1>jokes for</h1>
-
-        <div class="ChuckNorrisJoke">
-            <button class="novVic" onclick="newJoke()">nov vic</button>
-            <div class="joke"></div>
-        </div>
-
-        <div class="ChuckNorrisImg">
-            <img class="immage" src="">
-        </div>
-
-    </div>
--->
     <div class="data-wrapper">
     <button class="start">Start</button>
     <div class="general">
-        <input id="ime-input" type="text"/>
-        <input id="prezime-input" type="text"/>
+        <input id="ime-input" type="text" placeholder="vnesi ime"/>
+        <input id="prezime-input" type="text" placeholder="vnesi prezime"/>
         <button class="save">Save</button>
         </div>
     </div>
